--- a/apps/SolarBattery/composeApp/src/wasmJsMain/resources/index.html
+++ b/apps/SolarBattery/composeApp/src/wasmJsMain/resources/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blanket</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="styles.css" />
     <script type="application/javascript" src="composeApp.js"></script>
-</head>
-<body>
-</body>
+  </head>
+  <body></body>
 </html>
