--- a/public/404.html
+++ b/public/404.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--
   ISC License
   Copyright (c) 2024, Christopher Cartland
 -->
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Page Not Found - Christopher Cartland">
-    <meta name="theme-color" content="#263551">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Page Not Found - Christopher Cartland" />
+    <meta name="theme-color" content="#263551" />
     <title>Page Not Found - Christopher Cartland</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://chriscart.land/404">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="canonical" href="https://chriscart.land/404" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
@@ -91,8 +91,14 @@
     <main id="message">
       <h2>404</h2>
       <h1>Page Not Found</h1>
-      <p>The page you are looking for does not exist. Please check the URL for mistakes and try again. If you think this is an error, please contact me.</p>
-      <a href="/" class="home-link" aria-label="Return to homepage">Return to homepage</a>
+      <p>
+        The page you are looking for does not exist. Please check the URL for
+        mistakes and try again. If you think this is an error, please contact
+        me.
+      </p>
+      <a href="/" class="home-link" aria-label="Return to homepage"
+        >Return to homepage</a
+      >
     </main>
   </body>
 </html>
