style: Apply Prettier formatting

--- a/public/temperature-visualization.html
+++ b/public/temperature-visualization.html
@@ -332,9 +332,6 @@
         <input type="text" id="high-hex-input" class="hex-display" />
       </div>
     </div>
-    <script
-      type="module"
-      src="/js/temperature-visualization/main.js"
-    ></script>
+    <script type="module" src="/js/temperature-visualization/main.js"></script>
   </body>
 </html>
